Use Socket.io for communication

--- a/ui/application.html
+++ b/ui/application.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="custom.css" />
   </head>
   <body id="page">
+    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script type="text/javascript" src="./target/scala-2.11/wakingapp-ui-fastopt.js"></script>
     <script type="text/javascript" src="./target/scala-2.11/wakingapp-ui-launcher.js"></script>
   </body>
